# optimizers

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  pyproject.toml  routed-muon-research-plan.md
configs/: smoke.yaml  tempo_eval_global.yaml  tempo_eval_muon.yaml  wp01_airbench_eval.yaml  wp02_nanogpt_fp32embed.yaml  wp02_nanogpt_probe50.yaml  wp02_nanogpt_repro.yaml  wp02_nanogpt_repro_3seed.yaml  wp03_dynmuon_repro.yaml  wp12_airbench_instrumented.yaml  wp22_beta09_oscarm.yaml  wp22_channel_noise_only.yaml  wp22_channel_osc_only.yaml  wp22_exploratory_fullrouted.yaml  wp22_goscconst_025.yaml  wp22_goscconst_050.yaml  wp22_goscconst_075.yaml  wp22_headtohead_adamuon.yaml  wp22_headtohead_dynmuon.yaml  wp22_headtohead_muon.yaml  wp22_headtohead_normuon.yaml  wp22_headtohead_routed.yaml  wp22_lr2x_muon.yaml  wp22_lr2x_routed.yaml  wp22_null_muon_lrclip.yaml  wp22_null_muon_wd.yaml  wp22_null_routed_randomgating.yaml  wp22_null_routed_rhoignored.yaml  wp22_stress2_muon.yaml  wp22_stress2_routed.yaml  wp22_stress_muon.yaml  wp22_stress_routed.yaml  wp22_tuneA_muon.yaml  wp22_tuneA_routed.yaml  wp22_tuneB_muon.yaml  wp22_tuneB_routed.yaml  wp23_lambda_tracking.yaml
criteria/: README.md  airbench_tolerance.yaml.template  nanogpt_tolerance.yaml.template  occupancy_cooldown_preregistration.md  phase1_preregistration.md  phase1_preregistration.md.template  phase2_success.yaml.template
docs/: hyperstack-runbook.md  nanogpt-port.md  wp22-run-plan.md
reports/: baseline_airbench_aggregate.csv  baseline_airbench_aggregate.md  brainstorm-programs.md  (+79 more)
(+4997 files in other folders)
