[project]
name = "routed-muon"
version = "0.1.0"
description = "Routed Muon: per-direction regime classification and spectral shaping for Muon-family optimizers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "tqdm>=4.66",
    "einops>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: minutes-scale tests (torch.compile end-to-end). Run by default; skip with `-m 'not slow'`.",
]

[tool.uv]
# uv.lock is the pin. On this dev Mac torch resolves to CPU/MPS wheels;
# the Dockerfile provides the CUDA-enabled torch for cloud runs.
